# bet_maker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 2024_03_16_2059-610124ea82c4_create_bet_table.py
scripts/: start_app.sh
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/endpoints/: bet.py  event.py
src/app/core/: config.py  dependencies.py  loader.py
src/app/db/: config.py
src/app/db/models/: __init__.py  base.py  bet.py
src/app/middlewares/: logging.py
src/app/schemas/: __init__.py  bet.py  event.py
tests/: conftest.py  test_api.py
